--- a/pepeizqs deals web/Pages/Admin/Humble.cshtml
+++ b/pepeizqs deals web/Pages/Admin/Humble.cshtml
@@ -8,24 +8,39 @@
 @inject UserManager<Usuario> UserManager
 
 @{
+    #nullable disable
+
     ViewData["Title"] = "Admin Humble";
     Layout = "/Pages/Shared/_Layout.cshtml";
+
+    bool usuarioLogeado = SignInManager.IsSignedIn(User);
+
+    Usuario usuario = new Usuario();
+
+    bool adminLogeado = false;
+
+    if (usuarioLogeado == true)
+    {
+        usuario = await UserManager.GetUserAsync(User);
+
+        if (global::BaseDatos.Usuarios.Buscar.RolDios(usuario.UserName) == true)
+        {
+            adminLogeado = true;
+        }
+    }
 }
 
-@if (SignInManager.IsSignedIn(User))
+@if (adminLogeado == true)
 {
-	@if (await UsuarioCoger.RolDios(UserManager, User) == true)
-    {
-        <div class="perfil perfil-espacio-bottom">
-            <form method="post">
-                <input id="humble-texto" asp-for="Input.Texto" class="entrada-texto"/>
+    <div class="perfil perfil-espacio-bottom">
+        <form method="post">
+            <input id="humble-texto" asp-for="Input.Texto" class="entrada-texto" />
 
-                <button id="humble-cargar" type="submit" class="boton" style="margin-top: 30px;">Cargar</button>
-            </form>
-        </div>
+            <button id="humble-cargar" type="submit" class="boton" style="margin-top: 30px;">Cargar</button>
+        </form>
+    </div>
 
-        <div class="perfil">
-            @ViewData["Mensaje"]
-        </div>
-    }
+    <div class="perfil">
+        @ViewData["Mensaje"]
+    </div>
 }
