--- a/pepeizqs deals web/Pages/Componentes/Admin/Noticias.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Noticias.razor
@@ -393,22 +393,22 @@ else if (noticiaTipoSeleccionada == NoticiaTipo.Rumores.ToString())
                 {
                     if (usuario.NotificationBundles == true && noticiaAñadir.Tipo == NoticiaTipo.Bundles)
                     {
-                        Herramientas.Correos.EnviarNuevaNoticia(noticiaAñadir, usuario.Email, conexion);
+                        Herramientas.Correos.EnviarNuevaNoticia(noticiaAñadir, usuario.Email, conexion, usuario.Language);
                     }
 
                     if (usuario.NotificationFree == true && noticiaAñadir.Tipo == NoticiaTipo.Gratis)
                     {
-                        Herramientas.Correos.EnviarNuevaNoticia(noticiaAñadir, usuario.Email, conexion);
+                        Herramientas.Correos.EnviarNuevaNoticia(noticiaAñadir, usuario.Email, conexion, usuario.Language);
                     }
 
                     if (usuario.NotificationSubscriptions == true && noticiaAñadir.Tipo == NoticiaTipo.Suscripciones)
                     {
-                        Herramientas.Correos.EnviarNuevaNoticia(noticiaAñadir, usuario.Email, conexion);
+                        Herramientas.Correos.EnviarNuevaNoticia(noticiaAñadir, usuario.Email, conexion, usuario.Language);
                     }
 
                     if (usuario.NotificationOthers == true && noticiaAñadir.Tipo != NoticiaTipo.Bundles && noticiaAñadir.Tipo != NoticiaTipo.Gratis && noticiaAñadir.Tipo != NoticiaTipo.Suscripciones)
                     {
-                        Herramientas.Correos.EnviarNuevaNoticia(noticiaAñadir, usuario.Email, conexion);
+                        Herramientas.Correos.EnviarNuevaNoticia(noticiaAñadir, usuario.Email, conexion, usuario.Language);
                     }
                 }
 
