--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -114,7 +114,7 @@
                     </div>
                 </div>
 
-                <a href="@Herramientas.EnlaceAcortador.Generar(juego.Enlace, juego.Tipo)" class="boton-pequeño" style="padding: 0px; text-align: center; margin-bottom: 20px; position: relative; @fondoColor" target="_blank">
+                <a href="@Herramientas.EnlaceAcortador.Generar(juego.Enlace, juego.Tipo)" class="boton-pequeño" style="padding: 0px; text-align: center; position: relative; @fondoColor" target="_blank">
                     <div style="width: 100%; text-align: center; padding: 5px;">
                         <img src="@juego.Imagen" style="max-width: 100%; height: 100%;" alt="@juego.Nombre" />
 
