--- a/pepeizqs deals web/Pages/Componentes/Admin/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Juego.razor
@@ -655,6 +655,8 @@
 				juego.Imagenes = nuevoJuego.Imagenes;
 				juego.Caracteristicas = nuevoJuego.Caracteristicas;
 				juego.Media = nuevoJuego.Media;
+				juego.Categorias = nuevoJuego.Categorias;
+				juego.Generos = nuevoJuego.Generos;
 
 				BaseDatos.Juegos.Actualizar.Media(juego, conexion);
 			}
