--- a/pepeizqs deals web/Pages/Componentes/Tareas/Minimos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Tareas/Minimos.razor
@@ -330,7 +330,7 @@
 												}
 												catch
 												{
-													BaseDatos.Errores.Insertar.Mensaje("Tarea - Minimos Insertar", minimo.Juego.Nombre, conexion);
+													BaseDatos.Errores.Insertar.Mensaje("Tarea - Minimos Insertar", minimo.Juego.Nombre, conexion, null);
 												}
 											}
 										}
