--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -613,7 +613,7 @@
 										<div style="font-size: 13px; cursor: pointer;">@Calculadora.DiferenciaTiempo(bundle3.FechaTermina, idioma)</div>
 									</div>
 
-									<div style="text-align: right;">
+									<div style="text-align: right; width: 15%;">
 										<div style="cursor: pointer;">@BundlesPrepararPrecio(bundle3, juego.Id)</div>
 										<div style="font-size: 13px; cursor: pointer;">@BundlesPrepararInfo(bundle3, juego.Id)</div>
 									</div>
@@ -835,14 +835,14 @@
 			{
 				@if (string.IsNullOrEmpty(juego.Caracteristicas.Descripcion) == false)
 				{
-					<div class="perfil" style="width: 100%;">
+					<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px; width: 100%;">
 						@WebUtility.HtmlDecode(juego.Caracteristicas.Descripcion)
 					</div>
 				}
 
 				@if (juego.Caracteristicas.Desarrolladores != null || juego.Caracteristicas.Publishers != null || juego.Generos != null)
 				{
-					<div class="perfil" style="width: 100%; gap: 20px;">
+					<div class="perfil" style="border: 1px solid var(--fondoBotonPequeño); width: 100%; gap: 20px;">
 						@if (juego.Caracteristicas.Desarrolladores != null)
 						{
 							if (juego.Caracteristicas.Desarrolladores.Count > 0)
@@ -905,8 +905,6 @@
 										
 										<div>
 											@{
-
-
 												List<global::BaseDatos.Publishers.Publisher> publishersFinales = new List<global::BaseDatos.Publishers.Publisher>();
 
 												foreach (var publisher in listaPublishers)
@@ -949,6 +947,8 @@
 														publisherFinal2.Nombre = publisher;
 
 														publishersFinales.Add(publisherFinal2);
+
+														global::BaseDatos.Errores.Insertar.Mensaje("Publisher no encontrado", publisherFinal2.Nombre + " - " + juego.Nombre, "/game/" + juego.Id.ToString() + "/");
 													}
 												}
 
@@ -1015,7 +1015,7 @@
 				{
 					if (juego.Categorias.Count > 0)
 					{
-						<div class="perfil" style="padding: 10px; display: grid; grid-template-columns: 1fr 1fr; gap: 10px; width: 100%; grid-auto-rows: min-content;">
+						<div class="perfil" style="border: 1px solid var(--fondoBotonPequeño); padding: 10px; display: grid; grid-template-columns: 1fr 1fr; gap: 10px; width: 100%; grid-auto-rows: min-content;">
 							@foreach (var categoria in juego.Categorias)
 							{
 								string cadenaCategoria = Idiomas.CogerCadena(idioma, categoria, "Categories");
@@ -1117,6 +1117,52 @@
 							}
 						}
 					}
+				}
+
+				bool actualizarDatosAPI = false;
+
+				if (juego.FechaSteamAPIComprobacion + TimeSpan.FromDays(21) < DateTime.Now)
+				{
+					actualizarDatosAPI = true;
+				}
+
+				if (juego.Categorias == null && juego.Generos == null)
+				{
+					actualizarDatosAPI = true;
+				}
+
+				if (actualizarDatosAPI == true)
+				{
+					global::Juegos.Juego nuevoJuego = await APIs.Steam.Juego.CargarDatos(juego.IdSteam.ToString());
+
+					if (nuevoJuego != null)
+					{
+						if (juego.Imagenes.Library_600x900.Contains("i.imgur.com") == false)
+						{
+							juego.Imagenes.Library_600x900 = nuevoJuego.Imagenes.Library_600x900;
+						}
+
+						if (juego.Imagenes.Library_1920x620.Contains("i.imgur.com") == false)
+						{
+							juego.Imagenes.Library_1920x620 = nuevoJuego.Imagenes.Library_1920x620;
+						}
+
+						if (juego.Imagenes.Logo.Contains("i.imgur.com") == false)
+						{
+							juego.Imagenes.Logo = nuevoJuego.Imagenes.Logo;
+						}
+
+						juego.Imagenes.Capsule_231x87 = nuevoJuego.Imagenes.Capsule_231x87;
+						juego.Imagenes.Header_460x215 = nuevoJuego.Imagenes.Header_460x215;
+
+						juego.Nombre = nuevoJuego.Nombre;
+						juego.Caracteristicas = nuevoJuego.Caracteristicas;
+						juego.Media = nuevoJuego.Media;
+						juego.Categorias = nuevoJuego.Categorias;
+						juego.Generos = nuevoJuego.Generos;
+
+						global::BaseDatos.Juegos.Actualizar.Media(juego);
+					}					
 				}
 			}
 		}
@@ -1490,6 +1536,7 @@
 						nuevoTexto = nuevoTexto.Replace("Giants", null);
 						nuevoTexto = nuevoTexto.Replace("Microsoft Store", null);
 						nuevoTexto = nuevoTexto.Replace("Row", null);
+						nuevoTexto = nuevoTexto.Replace("Mac", null);
 					}
 
 					return nuevoTexto;
